<resources>
    <string name="app_name">Cylinder Mate</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="phone_no">Phone No</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="registeruser">Register</string>
    <string name="cylinder_type">Cylinder Type</string>
    <string-array name="types_array">
        <item>2.3 kg</item>
        <item>5 kg</item>
        <item>12.5 kg</item>
    </string-array>
</resources>
