<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.cylindermate.registerform">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/txtName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/enterName"
        android:layout_marginStart="24dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/enterAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_address"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toRightOf="@+id/txtAddress"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_no"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/enterCity"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/enterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_phone_no"
        android:inputType="phone"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/txtPhone"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/enterCity" />

    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cylinder_type"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/enterPhone"
        android:layout_marginLeft="32dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="183dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@+id/txtType"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/enterPhone" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registeruser"
        android:onClick="registerUser"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="City"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/enterAddress"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/enterCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="enter City"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/txtCity"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/enterAddress" />
</android.support.constraint.ConstraintLayout>
